# deeplearn

./: .gitignore  README.md  cli.py  papers.txt  pyproject.toml
conf/: config.yaml
deeplearn/: __main__.py  data.py  loss.py  model.py  optim.py  papers.py  plot.py  train.py
